# mydemo

./: README.md  mydemo.db  requirements.txt  setup.cfg  setup.py
mydemo/api/: app.py  config.py  expose.py  hooks.py
mydemo/api/controllers/: root.py
mydemo/api/controllers/v1/: controller.py  users.py
mydemo/cmd/: api.py
mydemo/db/: api.py  models.py
mydemo/db/sqlalchemy/: alembic.ini
mydemo/db/sqlalchemy/alembic/versions/: 5f1ca44013eb_create_user_table.py
